[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="button" type="Button" parent="."]
margin_left = 482.0
margin_top = 197.0
margin_right = 579.0
margin_bottom = 229.0
text = "SALVAR"

[node name="ordenar" type="Button" parent="."]
margin_left = 481.0
margin_top = 259.0
margin_right = 581.0
margin_bottom = 292.0
text = "ORDENAR"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 289.0
margin_top = 196.0
margin_right = 451.0
margin_bottom = 220.0
placeholder_text = "digite aqui"
placeholder_alpha = 0.078

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 286.0
margin_top = 267.0
margin_right = 439.0
margin_bottom = 377.0
color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Label" parent="ColorRect"]
margin_right = 152.0
margin_bottom = 73.0

[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="ordenar" to="." method="_on_ordenar_button_up"]
